--- a/about/index.html
+++ b/about/index.html
@@ -91,7 +91,7 @@
 <p>它采用的技术有 <a href="https://gohugo.io/" target="_blank" rel="noopener noreffer">Hugo</a> 和 [LoveIt主题。站中所有图片都采用阿里云OSS对象存储外链。</p>
 </blockquote>
 </div><div id="comments">
-        <div id="gitalk-container"></div>
+        <div id="gitalk" class="comment"></div>
         <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
         <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
         <script src="https://cdn.bootcdn.net/ajax/libs/blueimp-md5/2.18.0/js/md5.js"></script>
@@ -109,10 +109,10 @@
         });
         (function() {
             if (["localhost", "127.0.0.1"].indexOf(window.location.hostname) != -1) {
-                document.getElementById('gitalk-container').innerHTML = 'Gitalk comments not available by default when the website is previewed locally.';
+                document.getElementById('gitalk').innerHTML = 'Gitalk comments not available by default when the website is previewed locally.';
                 return;
             }
-            gitalk.render('gitalk-container');
+            gitalk.render('gitalk');
         })();
         </script>
         </div></div></div>
